agencement des formulaire

--- a/exercice7.html
+++ b/exercice7.html
@@ -53,17 +53,17 @@
 
     </header>
     <main>
-        <div class="alert alert-light offset-3 col-6 justify-content-center text-center mt-5" role="alert">
+        <div class="alert alert-danger offset-3 col-6 justify-content-center text-center mt-5" role="alert">
             <strong>ES-TU MAJEUR???</strong> Dis moi ton âge! 
         </div>
         <form>
            
-            <div class="form-group offset-4 col-4 justify-content-center text-center mt-2">
+            <div class="form-group offset-3 col-6 justify-content-center text-center mt-2">
               <label for="formGroupExampleInput2">Ton âge</label>
-              <input type="text" class="form-control" id="age" value="" placeholder="">
+              <input type="text" class="form-control col-6 offset-3" id="age" value="" placeholder="">
             </div>
             
-            <button type="button" id="bouton" class="btn btn-success offset-3 col-6 justify-content-center text-center mt-5" onclick="calculer()">GO!</button>
+            <button type="button" id="bouton" class="btn btn-success offset-3 col-6 justify-content-center text-center mt-5" >GO!</button>
           </form>
     </main>
     <footer>
