--- a/exercice5.html
+++ b/exercice5.html
@@ -53,11 +53,11 @@
 
     </header>
     <main>
-        <div class="alert alert-light offset-3 col-6 justify-content-center text-center mt-5" role="alert">
+        <div class="alert alert-info offset-3 col-6 text-center mt-5 bg-secondary" >
             <strong>Hey!</strong> Donne moi deux nombres et je t'affiche le reste de leur division! chiche?
         </div>
-        <form>
-            <div class="form-group offset-4 col-4 justify-content-center text-center mt-2">
+        <form class="col-6 offset-3 bg-secondary text-info justify-content-center">
+            <div class="form-group offset-4 col-4 justify-content-center text-center mt-2 ">
               <label for="formGroupExampleInput">Nombre 1</label>
               <input type="text" class="form-control" id="num1" value="" placeholder="">
             </div>
@@ -65,7 +65,7 @@
               <label for="formGroupExampleInput2">Nombre 2</label>
               <input type="text" class="form-control" id="num2" value="" placeholder="">
             </div>
-            <button type="button" id="bouton" class="btn btn-success offset-3 col-6 justify-content-center text-center mt-5" onclick="calculer()">calculer!</button>
+            <button type="button" id="bouton" class="btn btn-info offset-3 col-6 justify-content-center text-center mt-5 mb-5" onclick="calculer()">calculer!</button>
           </form>
     </main>
     <footer>
