--- a/exercice6.html
+++ b/exercice6.html
@@ -52,23 +52,23 @@
 
 
     </header>
-    <main>
-        <div class="alert alert-light offset-3 col-6 justify-content-center text-center mt-5" role="alert">
+    <main class="">
+        <div class="alert alert-success offset-3 col-6 justify-content-center text-center mt-5" role="alert">
             <strong>On fait un jeu?</strong> Donne moi ta pointure et ton année de naissance! 
         </div>
-        <form>
-            <div class="form-group offset-4 col-4 justify-content-center text-center mt-2">
-              <label for="formGroupExampleInput">Ta pointure</label>
-              <input type="text" class="form-control" id="pointure" value="" placeholder="">
+        <form class=" bg-warning col-6 offset-3 text-dark">
+            <div class="form-group bg-warning offset-4 col-4 justify-content-center text-center mt-5 mb-3">
+              <label class="mt-4" for="formGroupExampleInput">Ta pointure</label>
+              <input type="text" class="form-control mt-2" id="pointure" value="" placeholder="">
             </div>
             <div class="form-group offset-4 col-4 justify-content-center text-center mt-2">
               <label for="formGroupExampleInput2">Ton année de naissance</label>
               <input type="text" class="form-control" id="birthdate" value="" placeholder="">
             </div>
             <div class="alert alert-light offset-3 col-6 justify-content-center text-center mt-5" role="alert">
-                <strong>ATTENTION!</strong> je vais Multiplier la pointure par 2, ajouter 5 au résultat, multiplier le tout par 50, soustraire l’année de naissance et ajouter au tout 1769!<strong>Tu es prêt??</strong> 
+                <strong>ATTENTION!</strong> je vais Multiplier la pointure par 2, ajouter 5 au résultat, multiplier le tout par 50, soustraire l’année de naissance et ajouter au tout 1769 !&nbsp;<strong>Tu es prêt??</strong> 
             </div>
-            <button type="button" id="bouton" class="btn btn-success offset-3 col-6 justify-content-center text-center mt-5" onclick="calculer()">GO!</button>
+            <button type="button" id="bouton" class="btn btn-success offset-3 col-6 justify-content-center text-center mt-5 mb-5" onclick="calculer()">GO!</button>
           </form>
     </main>
     <footer>
